--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <img id="banner" src="imagens/banner.jpg" alt="Duas cadeiras pretas em uma barbearia">
-    <div>
+    <div class="principal" >
         <h1>Sobre a Barbearia Alura</h1>
 
         <p>Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
@@ -24,7 +24,7 @@
         <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
     </div>
 
-    <div>
+    <div class="beneficios" >
         <h2>Benefícios</h2>
 
         <ul>
@@ -33,6 +33,8 @@
             <li class="itens">Localização</li> 
             <li class="itens">Profissionais Qualificados</li> 
         </ul>
+
+        <img src="imagens/beneficios.jpg" alt="Barbeiro fazendo a barba de um homem grisalho">
     </div>
 
 </body>
