--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <header>
+        <h1 class="titulo-pincipal">Barbearia Alura</h1>
+    </header>
     <img id="banner" src="imagens/banner.jpg" alt="Duas cadeiras pretas em uma barbearia">
     <div class="principal" >
-        <h1>Sobre a Barbearia Alura</h1>
+        <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
 
         <p>Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -25,7 +27,7 @@
     </div>
 
     <div class="beneficios" >
-        <h2>Benefícios</h2>
+        <h2 class="titulo-centralizado">Benefícios</h2>
 
         <ul>
             <li class="itens">Atendimentoaos Clientes</li>
@@ -34,7 +36,7 @@
             <li class="itens">Profissionais Qualificados</li> 
         </ul>
 
-        <img src="imagens/beneficios.jpg" alt="Barbeiro fazendo a barba de um homem grisalho">
+        <img src="imagens/beneficios.jpg" alt="Barbeiro fazendo a barba de um homem grisalho" class="imagembeneficios" >
     </div>
 
 </body>
