--- a/index.html
+++ b/index.html
@@ -4,40 +4,48 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Site :: Barbearia</title>
-	<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <header>
+        <img id="banner" src="imagens/banner.jpg" alt="Duas cadeiras pretas em uma barbearia">
         <h1 class="titulo-pincipal">Barbearia Alura</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="produtos.html">Produtos</a></li>
+                <li><a href="contatos.html">Contatos</a></li>
+            </ul>
+        </nav>
     </header>
-    <img id="banner" src="imagens/banner.jpg" alt="Duas cadeiras pretas em uma barbearia">
-    <div class="principal" >
-        <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+    <main>
+        <div class="principal" >
+            <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+            <p>Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+            <p  id="missao" >
+                <em>Nossa missão é:
+                    <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".
+                    </strong>
+                </em>
+            </p>
+            <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+        </div>
+        <div class="beneficios" >
+            <h2 class="titulo-centralizado">Benefícios</h2>
+            <ul>
+                <li class="itens">Atendimentoaos Clientes</li>
+                <li class="itens">Espaço diferenciado</li>
+                <li class="itens">Localização</li>
+                <li class="itens">Profissionais Qualificados</li>
+            </ul>
+            <img src="imagens/beneficios.jpg" alt="Barbeiro fazendo a barba de um homem grisalho" class="imagembeneficios" >
+        </div>
+    </main>
 
-        <p>Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+    <footer>
 
-        <p  id="missao" >
-            <em>Nossa missão é: 
-                <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".
-                </strong>
-            </em>
-        </p>
-
-        <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-    </div>
-
-    <div class="beneficios" >
-        <h2 class="titulo-centralizado">Benefícios</h2>
-
-        <ul>
-            <li class="itens">Atendimentoaos Clientes</li>
-            <li class="itens">Espaço diferenciado</li>
-            <li class="itens">Localização</li> 
-            <li class="itens">Profissionais Qualificados</li> 
-        </ul>
-
-        <img src="imagens/beneficios.jpg" alt="Barbeiro fazendo a barba de um homem grisalho" class="imagembeneficios" >
-    </div>
+    </footer>
 
 </body>
 </html>
