Adiciona header no index

--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-	<meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Site :: Barbearia</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style-home.css">
-
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
     <header>
-        <img id="banner" src="imagens/banner.jpg" alt="Duas cadeiras pretas em uma barbearia">
-        <h1 class="titulo-pincipal">Barbearia Alura</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="produtos.html">Produtos</a></li>
-                <li><a href="contatos.html">Contatos</a></li>
-            </ul>
-        </nav>
+        <div class="caixa" >
+            <h1><img src="imagens/logo.png" alt=""></h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contatos.html">Contatos</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+
+        <h1 class="titulo_principal">Barbearia Alura</h1>
+
     <main>
         <div class="principal" >
             <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
