--- a/contatos.html
+++ b/contatos.html
@@ -58,7 +58,7 @@
     </main>
 
     <footer>
-        <img src="imagens/logo-branco.png" alt="">
+        <img src="imagens/logo.png" alt="Logo da Barbearia Alura">
         <p class="copyright" > &copy; Copyright Barbearia Alura - 2022</p>
     </footer>
 
