--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Site :: Barbearia</title>
-    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
     <header>
         <div class="caixa" >
-            <h1><img src="imagens/logo.png" alt=""></h1>
+            <img src="imagens/logo.png" alt="Logo da barbearia Alura">
+            <h1 class="titulo_principal">Barbearia Alura</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -21,25 +21,20 @@
             </nav>
         </div>
     </header>
-
-        <h1 class="titulo_principal">Barbearia Alura</h1>
-
     <main>
         <div class="principal" >
             <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
             <p>Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
-            <p  id="missao" >
-                <em>Nossa missão é:
-                    <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".
-                    </strong>
-                </em>
-            </p>
             <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+            <em>
+                <strong>Nossa missão é: "Proporcionar auto-estima e qualidade de vida aos clientes".
+                </strong>
+            </em>
         </div>
         <div class="beneficios" >
             <h2 class="titulo-centralizado">Benefícios</h2>
-            <ul>
-                <li class="itens">Atendimentoaos Clientes</li>
+            <ul class="lista-beneficios" >
+                <li class="itens">Atendimento aos Clientes</li>
                 <li class="itens">Espaço diferenciado</li>
                 <li class="itens">Localização</li>
                 <li class="itens">Profissionais Qualificados</li>
@@ -49,7 +44,8 @@
     </main>
 
     <footer>
-
+        <img src="imagens/logo.png" alt="Logo da barbearia Alura">
+        <p class="copyright" > &copy; Copyright Barbearia Alura - 2022</p>
     </footer>
 
 </body>
