--- a/index.html
+++ b/index.html
@@ -3,51 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Site :: Barbearia</title>
+	<meta name="viewport" content="width=device-width">
+	<title>Home : : Barbearia</title>
+    <link rel="stylesheet" href="cc/reset.css">
     <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
     <header>
-        <div class="caixa" >
-            <img src="imagens/logo.png" alt="Logo da barbearia Alura">
-            <h1 class="titulo_principal">Barbearia Alura</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="contatos.html">Contatos</a></li>
-                </ul>
-            </nav>
-        </div>
+            <div class="caixa" >
+                <img src="imagens/logo.png" alt="">
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contatos.html">Contatos</a></li>
+                    </ul>
+                </nav>
+            </div>
     </header>
+
+    <img  class="banner" src="imagens/banner.jpg" alt="">
+
     <main>
-        <div class="principal" >
-            <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
-            <p>Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+        <section class="principal" >
+            <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+
+            <img class="utensilios" src="imagens/principal.jpg" alt="Pincel de barba e navalha para Barbeiro">
+
+            <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
             <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
             <em>
                 <strong>Nossa missão é: "Proporcionar auto-estima e qualidade de vida aos clientes".
                 </strong>
             </em>
-        </div>
-        <div class="beneficios" >
-            <h2 class="titulo-centralizado">Benefícios</h2>
-            <ul class="lista-beneficios" >
-                <li class="itens">Atendimento aos Clientes</li>
-                <li class="itens">Espaço diferenciado</li>
-                <li class="itens">Localização</li>
-                <li class="itens">Profissionais Qualificados</li>
-            </ul>
-            <img src="imagens/beneficios.jpg" alt="Barbeiro fazendo a barba de um homem grisalho" class="imagembeneficios" >
-        </div>
+        </section>
+        <section class="mapa">
+            <h3 class="titulo-principal">Nosso estabelecimento</h3>
+            <p>Nosso estabelecimento está localizado no coração da cidade.</p>
+            <div class="mapa-conteudo">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3053.1205502902963!2d-46.65354592537339!3d-23.56474837163899!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59541c6c79c3%3A0x36b90a85f0f8cb33!2sGrupo%20Alura!5e0!3m2!1spt-BR!2sbr!4v1664735951780!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
+        <section class="beneficios" >
+            <h3 class="titulo-principal">Benefícios</h3>
+            <div class="conteudo-beneficios" >
+                <ul class="lista-beneficios" >
+                    <li class="itens">Atendimento aos Clientes</li>
+                    <li class="itens">Espaço diferenciado</li>
+                    <li class="itens">Localização</li>
+                    <li class="itens">Profissionais Qualificados</li>
+                    <li class="itens">Pontualidade</li>
+                    <li class="itens">Limpeza</li>
+                </ul><img src="imagens/beneficios.jpg" alt="Barbeiro fazendo a barba de um homem grisalho" class="imagem-beneficios" >
+            </div>
+            <div class="video" >
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
     </main>
-
     <footer>
         <img src="imagens/logo.png" alt="Logo da barbearia Alura">
         <p class="copyright" > &copy; Copyright Barbearia Alura - 2022</p>
     </footer>
-
 </body>
 </html>
 
